jupyterhub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  namespace: jupyterhub
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jupyterhub-k3s.apulache.io
      secretName: jupyterhub-wildcard-tls
  rules:
    - host: jupyterhub-k3s.apulache.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
